Sutter Health/src/objects/SH_Menu_Item__c.object
<CustomObject>
    <fields>
        <fullName>SH_Content_Image_Url__c</fullName>
        <label>Content Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Content_Image__c</fullName>
        <formula>IF(ISBLANK(SH_Content_Image_Url__c), &apos;&apos;, 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +SH_Content_Image_Url__c)</formula>
        <label>Content Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Customer_Intent__c</fullName>
        <label>Customer Intent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SH_Sub_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>HR-Health &amp; Welfare</fullName>
                </value>
                <value>
                    <fullName>Insurance (Medical, Dental, Vision)</fullName>
                </value>
                <value>
                    <fullName>HR-Pension/Retiree Benefits</fullName>
                </value>
                <value>
                    <fullName>System Inquiries</fullName>
                </value>
                <value>
                    <fullName>Pay inquiry</fullName>
                </value>
                <value>
                    <fullName>Kronos</fullName>
                </value>
                <value>
                    <fullName>Learning Administration</fullName>
                </value>
                <value>
                    <fullName>MyPSDP</fullName>
                </value>
                <value>
                    <fullName>Workforce Relations</fullName>
                </value>
                <value>
                    <fullName>Requisition</fullName>
                </value>
                <value>
                    <fullName>HR Information System (HRIS)</fullName>
                </value>
                <value>
                    <fullName>Employee Compensation</fullName>
                </value>
                <value>
                    <fullName>Contingent Staffing</fullName>
                </value>
                <value>
                    <fullName>General AP Inquiry</fullName>
                </value>
                <value>
                    <fullName>Vendor Setup/Vendor Data Change Request</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>HR Disability Leave Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH_Employee_EEO_subcode__c</fullName>
        <description>Need to update picklist values</description>
        <label>Employee EEO subcode</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Document Management Center</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Is_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Is_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Order_of_Display__c</fullName>
        <label>Order of Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Sub_Function__c</fullName>
        <label>Sub-Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SH_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable and Managed Care</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Application Request</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Biomedical Technology</fullName>
                </value>
                <value>
                    <fullName>CBO Customer Service</fullName>
                </value>
                <value>
                    <fullName>Central Business Office (CBO)</fullName>
                </value>
                <value>
                    <fullName>Comp &amp; Perf Mgt</fullName>
                </value>
                <value>
                    <fullName>HR Compensation</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Credentialing Verification</fullName>
                </value>
                <value>
                    <fullName>Data, Applications, Reporting and Audit</fullName>
                </value>
                <value>
                    <fullName>Data Change Request</fullName>
                </value>
                <value>
                    <fullName>Decision Support Group &amp; Data Management</fullName>
                </value>
                <value>
                    <fullName>Document Management Center</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>General Purchasing</fullName>
                </value>
                <value>
                    <fullName>GL Accounting</fullName>
                </value>
                <value>
                    <fullName>Health Information Management (HIM)</fullName>
                </value>
                <value>
                    <fullName>HIM</fullName>
                </value>
                <value>
                    <fullName>HR Benefits</fullName>
                </value>
                <value>
                    <fullName>HR Information System (HRIS)</fullName>
                </value>
                <value>
                    <fullName>HR Ops</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Other Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SH_Sub_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>[Tier 1] HR Benefits</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] HR Pension</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Payroll T&amp;E / Compensation</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Learning</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] HRIS</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Workforce Relations</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Recruitment</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] Compensation</fullName>
                </value>
                <value>
                    <fullName>[Tier 1] AP / Purchasing / Supply Chain</fullName>
                </value>
                <value>
                    <fullName>[Tier 3] Purchasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Menu Item</label>
    <nameField>
        <label>Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Icon_required_on_publish_preview</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISBLANK( SH_Icon__c ), 
OR( SH_Is_Preview__c, SH_Is_Publish__c) 
)</errorConditionFormula>
        <errorDisplayField>SH_Icon__c</errorDisplayField>
        <errorMessage>Please assign icon before publish/preview.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Image_required_on_publish_preview</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISBLANK( SH_Content_Image_Url__c ), 
OR( SH_Is_Preview__c, SH_Is_Publish__c) 
)</errorConditionFormula>
        <errorMessage>Please upload image before publish/preview</errorMessage>
    </validationRules>
</CustomObject>